@@ -10,7 +10,7 @@
 
 require_once(dirname(__FILE__).'/../../bootstrap/unit.php');
 
-$t = new lime_test(84, new lime_output_color());
+$t = new lime_test(114, new lime_output_color());
 
 $v = new sfValidatorSchemaCompare('left', sfValidatorSchemaCompare::EQUAL, 'right');
 
@@ -25,6 +25,9 @@ foreach (array(
   array(array('left' => 2, 'right' => 1), sfValidatorSchemaCompare::GREATER_THAN),
   array(array('left' => 2, 'right' => 2), sfValidatorSchemaCompare::GREATER_THAN_EQUAL),
   array(array('left' => 'foo', 'right' => 'bar'), sfValidatorSchemaCompare::NOT_EQUAL),
+  array(array('left' => '0000', 'right' => '0'), sfValidatorSchemaCompare::NOT_IDENTICAL),
+  array(array('left' => '0000', 'right' => '0'), sfValidatorSchemaCompare::EQUAL),
+  array(array('left' => '0000', 'right' => '0000'), sfValidatorSchemaCompare::IDENTICAL),
 
   array(array('left' => 'foo', 'right' => 'foo'), '=='),
   array(array(), '=='),
@@ -34,6 +37,9 @@ foreach (array(
   array(array('left' => 2, 'right' => 1), '>'),
   array(array('left' => 2, 'right' => 2), '>='),
   array(array('left' => 'foo', 'right' => 'bar'), '!='),
+  array(array('left' => '0000', 'right' => '0'), '!=='),
+  array(array('left' => '0000', 'right' => '0'), '=='),
+  array(array('left' => '0000', 'right' => '0000'), '==='),
 ) as $values)
 {
   $v->setOption('operator', $values[1]);
@@ -49,6 +55,9 @@ foreach (array(
   array(array('left' => 2, 'right' => 1), sfValidatorSchemaCompare::LESS_THAN),
   array(array('left' => 3, 'right' => 2), sfValidatorSchemaCompare::LESS_THAN_EQUAL),
   array(array('left' => 'foo', 'right' => 'bar'), sfValidatorSchemaCompare::EQUAL),
+  array(array('left' => '0000', 'right' => '0'), sfValidatorSchemaCompare::IDENTICAL),
+  array(array('left' => '0000', 'right' => '0'), sfValidatorSchemaCompare::NOT_EQUAL),
+  array(array('left' => '0000', 'right' => '0000'), sfValidatorSchemaCompare::NOT_IDENTICAL),
 
   array(array('left' => 'foo', 'right' => 'foo'), '!='),
   array(array(), '!='),
@@ -58,6 +67,9 @@ foreach (array(
   array(array('left' => 2, 'right' => 1), '<'),
   array(array('left' => 3, 'right' => 2), '<='),
   array(array('left' => 'foo', 'right' => 'bar'), '=='),
+  array(array('left' => '0000', 'right' => '0'), '==='),
+  array(array('left' => '0000', 'right' => '0'), '!='),
+  array(array('left' => '0000', 'right' => '0000'), '!=='),
 ) as $values)
 {
   $v->setOption('operator', $values[1]);
